Some cleaning updates

--- a/experiments/example_experiments.ipynb
+++ b/experiments/example_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
     "    height=500\n",
     ")\n",
     "fig.show()\n",
-    "fig.write_image(\"new_capacity.png\")"
+    "fig.write_image(PROJECT_ROOT_DIR / \"figures\" / \"new_capacity.png\")"
    ]
   },
   {
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2021,7 @@
     "    height=500\n",
     ")\n",
     "fig.show()\n",
-    "fig.write_image(\"new_capacity_no_zero.png\")"
+    "fig.write_image(PROJECT_ROOT_DIR / \"figures\" / \"new_capacity_no_zero.png\")"
    ]
   },
   {
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3050,7 +3050,7 @@
     "    height=600\n",
     ")\n",
     "fig.show()\n",
-    "fig.write_image(\"rate_of_activity.png\")"
+    "fig.write_image(PROJECT_ROOT_DIR / \"figures\" / \"rate_of_activity.png\")"
    ]
   },
   {
@@ -3069,7 +3069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3988,7 +3988,7 @@
     "    xaxis_title=\"Year\",\n",
     ")\n",
     "fig.show()\n",
-    "fig.write_image(\"accumulated_storage_capacity.png\")"
+    "fig.write_image(PROJECT_ROOT_DIR / \"figures\" / \"accumulated_storage_capacity.png\")"
    ]
   }
  ],
